@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,7 +24,6 @@ import org.jkiss.dbeaver.model.net.DBWHandlerConfiguration;
 import org.jkiss.dbeaver.model.net.DBWUtils;
 import org.jkiss.dbeaver.registry.DataSourceProviderDescriptor;
 import org.jkiss.dbeaver.registry.DataSourceProviderRegistry;
-import org.jkiss.dbeaver.registry.driver.DriverDescriptor;
 import org.jkiss.dbeaver.registry.network.NetworkHandlerDescriptor;
 import org.jkiss.dbeaver.registry.network.NetworkHandlerRegistry;
 import org.jkiss.dbeaver.ui.config.migration.datagrip.DataGripConfigXMLConstant;
@@ -34,20 +33,26 @@ import org.jkiss.dbeaver.ui.config.migration.wizards.ImportConnectionInfo;
 import org.jkiss.dbeaver.ui.config.migration.wizards.ImportDriverInfo;
 import org.jkiss.dbeaver.utils.RuntimeUtils;
 import org.jkiss.utils.CommonUtils;
+import org.jkiss.utils.StandardConstants;
 import org.jkiss.utils.xml.XMLException;
 import org.jkiss.utils.xml.XMLUtils;
 import org.w3c.dom.*;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.StringReader;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourceConfigXmlService {
+    private static final Pattern DATASOURCE_FRAGMENT_PATTERN = Pattern.compile("(?is)<data-source\\b.*?</data-source>");
 
     public static final DataGripDataSourceConfigXmlServiceImpl INSTANCE = new DataGripDataSourceConfigXmlServiceImpl();
 
@@ -56,8 +61,9 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
     private DataGripDataSourceConfigXmlServiceImpl() {
     }
 
+    @NotNull
     @Override
-    public @NotNull Map<String, Map<String, String>> buildIdeaConfigProps(@NotNull String pathToIdeaFolder) throws Exception {
+    public Map<String, Map<String, String>> buildIdeaConfigProps(@NotNull String pathToIdeaFolder) throws Exception {
         Map<String, Map<String, String>> uuidToDataSourceProps = new HashMap<>();
         Path pathToDataSource = Path.of(pathToIdeaFolder, DataGripConfigXMLConstant.IDEA_FOLDER, DataGripConfigXMLConstant.DATASOURCE_XML_FILENAME);
         Path pathToDataSourceLocal = Path.of(pathToIdeaFolder, DataGripConfigXMLConstant.IDEA_FOLDER, DataGripConfigXMLConstant.DATASOURCE_LOCAL_XML_FILENAME);
@@ -69,6 +75,17 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
         Map<String, Map<String, String>> sshIdToSshConfigMap = tryReadIdeaSshConfig(getJetBrainsDirectory());
         uuidToDataSourceProps = mergeSshConfigToIdeaConfigMap(uuidToDataSourceProps, sshIdToSshConfigMap);
         return uuidToDataSourceProps;
+    }
+
+    @NotNull
+    @Override
+    public Map<String, Map<String, String>> buildIdeaConfigPropsFromText(@NotNull String rawConfigText) throws Exception {
+        String normalizedXml = normalizeRawConfigText(rawConfigText);
+        Map<String, Map<String, String>> configProps = importXML(XMLUtils.parseDocument(new StringReader(normalizedXml)));
+        if (configProps.isEmpty()) {
+            throw new ImportConfigurationException("No data sources found");
+        }
+        return configProps;
     }
 
     @NotNull
@@ -101,11 +118,12 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
         }
         String pathFromUserHome = split[1];
         String osDependencePath = CommonUtils.makeOsDependencePath(pathFromUserHome);
-        return System.getProperty("user.home") + File.separator + osDependencePath;
+        return System.getProperty(StandardConstants.ENV_USER_HOME) + File.separator + osDependencePath;
     }
 
+    @NotNull
     @Override
-    public @NotNull ImportConnectionInfo buildIdeaConnectionFromProps(@NotNull Map<String, String> conProps) {
+    public ImportConnectionInfo buildIdeaConnectionFromProps(@NotNull Map<String, String> conProps) {
 
         ImportDriverInfo driverInfo = buildDriverInfo(conProps);
         String url = conProps.get(DataGripConfigXMLConstant.JDBC_URL_TAG);
@@ -122,7 +140,9 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
             ""
         );
         configureDriverProperties(connectionInfo, conProps);
-        configureSshConfig(connectionInfo, conProps);
+        if (hasSshConfiguration(conProps)) {
+            configureSshConfig(connectionInfo, conProps);
+        }
         log.debug("load connection: " + connectionInfo);
         return connectionInfo;
     }
@@ -158,7 +178,7 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
         if (RuntimeUtils.isMacOS()) {
             defaultWorkingDirectory = Path.of("Application Support", DataGripConfigXMLConstant.JET_BRAINS_HOME_FOLDER);
         } else if (RuntimeUtils.isLinux()){
-            Path path = Path.of(System.getProperty("user.home"),".config", DataGripConfigXMLConstant.JET_BRAINS_HOME_FOLDER);
+            Path path = Path.of(System.getProperty(StandardConstants.ENV_USER_HOME),".config", DataGripConfigXMLConstant.JET_BRAINS_HOME_FOLDER);
             log.info("Using linux path for import config home directory: " + path);
             return path.toString();
         }
@@ -196,8 +216,10 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
     }
 
     private void configureSshConfig(ImportConnectionInfo connectionInfo, Map<String, String> conProps) {
-
         NetworkHandlerDescriptor sslHD = NetworkHandlerRegistry.getInstance().getDescriptor(DBWUtils.SSH_TUNNEL);
+        if (sslHD == null) {
+            return;
+        }
         DBWHandlerConfiguration sshHandler = new DBWHandlerConfiguration(sslHD, null);
         sshHandler.setUserName(conProps.get(DataGripConfigXMLConstant.SSH_USERNAME_PATH));
         sshHandler.setSavePassword(true);
@@ -215,6 +237,14 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
         sshHandler.setProperty("implementation", "sshj");
         sshHandler.setEnabled(true);
         connectionInfo.addNetworkHandler(sshHandler);
+    }
+
+    private boolean hasSshConfiguration(@NotNull Map<String, String> conProps) {
+        if ("false".equalsIgnoreCase(conProps.get(DataGripConfigXMLConstant.SSH_PROPERTIES_ENABLE_PATH))) {
+            return false;
+        }
+        return !CommonUtils.isEmpty(conProps.get(DataGripConfigXMLConstant.SSH_HOST_PATH)) ||
+            !CommonUtils.isEmpty(conProps.get(DataGripConfigXMLConstant.SSH_PROPERTIES_UUID_PATH));
     }
 
     private Map<String, Map<String, String>> mergeSshConfigToIdeaConfigMap(
@@ -275,7 +305,10 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
     }
 
     private Map<String, Map<String, String>> importXML(Path filePath) throws XMLException {
-        Document document = XMLUtils.parseDocument(filePath.toAbsolutePath().toString());
+        return importXML(XMLUtils.parseDocument(filePath.toAbsolutePath().toString()));
+    }
+
+    private Map<String, Map<String, String>> importXML(Document document) throws XMLException {
         Map<String, String> conProps = new HashMap<>();
         Map<String, Map<String, String>> uuidToDatasourceProps = new HashMap<>();
         // * - for getting all element
@@ -326,8 +359,53 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
                 conProps.put(element.getNodeName(), element.getFirstChild().getNodeValue());
             }
         }
-        uuidToDatasourceProps.put(uuid, conProps);
+        if (uuid != null) {
+            uuidToDatasourceProps.put(uuid, conProps);
+        }
         return uuidToDatasourceProps;
+    }
+
+    @NotNull
+    private String normalizeRawConfigText(@NotNull String rawConfigText) throws XMLException {
+        List<String> dataSourceFragments = extractDataSourceFragments(rawConfigText);
+        if (!dataSourceFragments.isEmpty()) {
+            String wrappedFragments = "<root>\n" + String.join("\n", dataSourceFragments) + "\n</root>";
+            XMLUtils.parseDocument(new StringReader(wrappedFragments));
+            return wrappedFragments;
+        }
+
+        String cleanedText = rawConfigText.lines()
+            .map(String::trim)
+            .filter(line -> !line.startsWith("#"))
+            .filter(line -> !line.isEmpty())
+            .collect(Collectors.joining("\n"))
+            .trim();
+        if (cleanedText.isEmpty()) {
+            return cleanedText;
+        }
+        try {
+            XMLUtils.parseDocument(new StringReader(cleanedText));
+            return cleanedText;
+        } catch (XMLException e) {
+            String wrappedText = "<root>\n" + stripXmlDeclaration(cleanedText) + "\n</root>";
+            XMLUtils.parseDocument(new StringReader(wrappedText));
+            return wrappedText;
+        }
+    }
+
+    @NotNull
+    private List<String> extractDataSourceFragments(@NotNull String rawConfigText) {
+        Matcher matcher = DATASOURCE_FRAGMENT_PATTERN.matcher(rawConfigText);
+        List<String> fragments = new ArrayList<>();
+        while (matcher.find()) {
+            fragments.add(matcher.group().trim());
+        }
+        return fragments;
+    }
+
+    @NotNull
+    private String stripXmlDeclaration(@NotNull String xmlText) {
+        return xmlText.replaceFirst("^\\s*<\\?xml[^>]*\\?>\\s*", "");
     }
 
     private URI parseURL(String url) {
@@ -344,8 +422,19 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
     }
 
     private static boolean isNodeHasTextValue(Node element) {
-        return element.hasChildNodes() && element.getChildNodes().getLength() > 0 &&
-            !element.getFirstChild().getNodeValue().isBlank();
+        if (!element.hasChildNodes() || element.getChildNodes().getLength() == 0) {
+            return false;
+        }
+        Node firstChild = element.getFirstChild();
+        if (firstChild == null) {
+            return false;
+        }
+        short nodeType = firstChild.getNodeType();
+        if (nodeType != Node.TEXT_NODE && nodeType != Node.CDATA_SECTION_NODE) {
+            return false;
+        }
+        String nodeValue = firstChild.getNodeValue();
+        return nodeValue != null && !nodeValue.isBlank();
     }
 
     private ImportDriverInfo buildDriverInfo(Map<String, String> conProps) {
@@ -392,8 +481,8 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
         DataSourceProviderRegistry dataSourceProviderRegistry = DataSourceProviderRegistry.getInstance();
         List<DataSourceProviderDescriptor> dataSourceProviders = dataSourceProviderRegistry.getDataSourceProviders();
         for (DataSourceProviderDescriptor dataSourceProvider : dataSourceProviders) {
-            List<DriverDescriptor> drivers = dataSourceProvider.getDrivers();
-            for (DriverDescriptor driver : drivers) {
+            List<DBPDriver> drivers = dataSourceProvider.getDrivers();
+            for (DBPDriver driver : drivers) {
                 if (driver.getName().equalsIgnoreCase(name) || driver.getId().equalsIgnoreCase(name)
                     || driver.getName().equalsIgnoreCase(refDriverName)
                     || driver.getId().equalsIgnoreCase(refDriverName)) {
@@ -408,7 +497,7 @@ public class DataGripDataSourceConfigXmlServiceImpl implements DataGripDataSourc
                 || dataSourceProvider.getId().equalsIgnoreCase(refDriverName)
                 || dataSourceProvider.getName().equalsIgnoreCase(refDriverName)) {
                 if (!drivers.isEmpty()) {
-                    DriverDescriptor driverDescriptor = drivers.get(0);
+                    DBPDriver driverDescriptor = drivers.getFirst();
                     while (driverDescriptor.getReplacedBy() != null) {
                         driverDescriptor = driverDescriptor.getReplacedBy();
                     }
